test/corpus/headlines.txt
==================
Plain headline
==================
* Hello world

---

(document
  (headline
    (headline_line
      (stars)
      (title))))

==================
Headline with TODO keyword
==================
** TODO Do the thing

---

(document
  (headline
    (headline_line
      (stars)
      (todo)
      (title))))

==================
Headline with TODO and priority
==================
* TODO [#A] Urgent task

---

(document
  (headline
    (headline_line
      (stars)
      (todo)
      (priority)
      (title))))

==================
Priority cookie without separator (Emacs `[#A]Stretch`)
==================
* TODO [#A]Stretch
Body line.

---

(document
  (headline
    (headline_line
      (stars)
      (todo)
      (priority)
      (title))
    (section
      (paragraph))))

==================
Headline with only tags
==================
* Task :work:urgent:

---

(document
  (headline
    (headline_line
      (stars)
      (title)
      (tag_list
        (tag)
        (tag)))))

==================
Full combo: stars, todo, priority, title, tags
==================
* TODO [#B] Full combo :project:

---

(document
  (headline
    (headline_line
      (stars)
      (todo)
      (priority)
      (title)
      (tag_list
        (tag)))))

==================
Nested sections
==================
* Parent
** Child
*** Grandchild

---

(document
  (headline
    (headline_line
      (stars)
      (title))
    (headline
      (headline_line
        (stars)
        (title))
      (headline
        (headline_line
          (stars)
          (title))))))

==================
Headline followed by paragraph
==================
* Heading
Body line one.
Body line two.

---

(document
  (headline
    (headline_line
      (stars)
      (title))
    (section
      (paragraph))))

==================
Title containing bold stars
==================
* Bold *inside* title should not confuse parser

---

(document
  (headline
    (headline_line
      (stars)
      (title))))

==================
Two same-depth headlines with blank line between
==================
* First

* Second

---

(document
  (headline
    (headline_line
      (stars)
      (title)))
  (headline
    (headline_line
      (stars)
      (title))))

==================
Same-depth siblings after deeper child
==================
* A
** B
* C

---

(document
  (headline
    (headline_line
      (stars)
      (title))
    (headline
      (headline_line
        (stars)
        (title))))
  (headline
    (headline_line
      (stars)
      (title))))

==================
Two children under one parent
==================
* A
** B
** C

---

(document
  (headline
    (headline_line
      (stars)
      (title))
    (headline
      (headline_line
        (stars)
        (title)))
    (headline
      (headline_line
        (stars)
        (title)))))

==================
Document starting with a blank line then text
==================

some text

---

(document
  (zeroth_section
    (paragraph)))

==================
Document starting with multiple blank lines then text
==================



text

---

(document
  (zeroth_section
    (paragraph)))

==================
Document starting with a blank line then a headline
==================

* After blank

---

(document
  (headline
    (headline_line
      (stars)
      (title))))
