test/corpus/inlinetask.txt
==================
Empty inlinetask
==================
* Heading
*************** Inlinetask
*************** END

---

(document
  (headline
    (headline_line
      (stars)
      (title))
    (section
      (inlinetask
        (inlinetask_line
          (stars)
          (title))))))

==================
Inlinetask with body paragraph
==================
* Heading
*************** Inlinetask
Body line.
*************** END

---

(document
  (headline
    (headline_line
      (stars)
      (title))
    (section
      (inlinetask
        (inlinetask_line
          (stars)
          (title))
        (paragraph)))))

==================
Inlinetask with planning
==================
* Heading
*************** TODO Inlinetask
SCHEDULED: <2026-04-29>
*************** END

---

(document
  (headline
    (headline_line
      (stars)
      (title))
    (section
      (inlinetask
        (inlinetask_line
          (stars)
          (todo)
          (title))
        (planning
          (planning_line
            (planning_entry
              (planning_keyword)
              (planning_timestamp))))))))

==================
Inlinetask with property drawer
==================
* Heading
*************** Inlinetask
:PROPERTIES:
:ID: abc
:END:
*************** END

---

(document
  (headline
    (headline_line
      (stars)
      (title))
    (section
      (inlinetask
        (inlinetask_line
          (stars)
          (title))
        (property_drawer
          (node_property
            (property_name)
            (property_value)))))))

==================
Inlinetask with planning, properties, and body
==================
* Heading
*************** TODO Inlinetask
SCHEDULED: <2026-04-29>
:PROPERTIES:
:ID: abc
:END:
Body paragraph.
*************** END

---

(document
  (headline
    (headline_line
      (stars)
      (title))
    (section
      (inlinetask
        (inlinetask_line
          (stars)
          (todo)
          (title))
        (planning
          (planning_line
            (planning_entry
              (planning_keyword)
              (planning_timestamp))))
        (property_drawer
          (node_property
            (property_name)
            (property_value)))
        (paragraph)))))

==================
Inlinetask line with statistics cookie
==================
*************** Task [1/2]
*************** END

---

(document
  (zeroth_section
    (inlinetask
      (inlinetask_line
        (stars)
        (title)
        (statistics_cookie)))))

==================
Planning-shaped line after a blank line inside an inlinetask is a paragraph
==================
*************** Inlinetask

SCHEDULED: <2026-01-01>
*************** END

---

(document
  (zeroth_section
    (inlinetask
      (inlinetask_line
        (stars)
        (title))
      (paragraph))))

==================
A second inlinetask line without a matching END redefines the first (Emacs: two sibling inlinetasks, no ERROR)
==================
*************** T1
*************** T2

---

(document
  (zeroth_section
    (inlinetask
      (inlinetask_line
        (stars)
        (title)))
    (inlinetask
      (inlinetask_line
        (stars)
        (title)))))

==================
A bare star run with no trailing space is not inlinetask-shaped and stays body text
==================
*************** T1
***************

---

(document
  (zeroth_section
    (inlinetask
      (inlinetask_line
        (stars)
        (title))
      (paragraph))))

==================
Inlinetask close tolerates extra internal and trailing horizontal whitespace around END
==================
*************** T1
***************  END

---

(document
  (zeroth_section
    (inlinetask
      (inlinetask_line
        (stars)
        (title)))))

==================
A star line whose title merely starts with END does not close - it redefines
==================
*************** T1
*************** ENDx

---

(document
  (zeroth_section
    (inlinetask
      (inlinetask_line
        (stars)
        (title)))
    (inlinetask
      (inlinetask_line
        (stars)
        (title)))))
