test/corpus/keywords_and_drawers.txt
==================
Keyword: title
==================
#+title: My Document

---

(document
  (zeroth_section
    (keyword
      (directive_name)
      (directive_value))))

==================
Keyword: filetags
==================
#+filetags: :proj:

---

(document
  (zeroth_section
    (keyword
      (directive_name)
      (directive_value))))

==================
Keyword without value
==================
#+TITLE:

---

(document
  (zeroth_section
    (keyword
      (directive_name))))

==================
Custom drawer with name
==================
* H
:LOGBOOK:
note 1
:END:

---

(document
  (headline
    (headline_line
      (stars)
      (title))
    (section
      (drawer
        (drawer_name)
        (paragraph)))))

==================
Property drawer with one property
==================
* H
:PROPERTIES:
:ID: my-id
:END:

---

(document
  (headline
    (headline_line
      (stars)
      (title))
    (property_drawer
      (node_property
        (property_name)
        (property_value)))))

==================
Property drawer with multiple properties (indented)
==================
* H
  :PROPERTIES:
  :ID:        my-id
  :CUSTOM_ID: foo
  :ROAM_REFS: cite:knuth1968
  :END:

---

(document
  (headline
    (headline_line
      (stars)
      (title))
    (property_drawer
      (node_property
        (property_name)
        (property_value))
      (node_property
        (property_name)
        (property_value))
      (node_property
        (property_name)
        (property_value)))))

==================
Indented keyword
==================
  #+TITLE: indented

---

(document
  (zeroth_section
    (keyword
      (directive_name)
      (directive_value))))

==================
Keyword with no space before the value
==================
#+TITLE:value

---

(document
  (zeroth_section
    (keyword
      (directive_name)
      (directive_value))))

==================
Affiliated keyword attaches before a table
==================
#+CAPTION: a table
| a |

---

(document
  (zeroth_section
    (affiliated_keyword
      (directive_name)
      (directive_value))
    (table
      (table_row
        (table_cell)))))

==================
Lowercase tblfm formula
==================
#+tblfm: $2=$1

---

(document
  (zeroth_section
    (formula
      (directive_name)
      (directive_value))))

==================
Whitespace-only keyword value produces no value node
==================
#+TITLE:   

---

(document
  (zeroth_section
    (keyword
      (directive_name))))

==================
Affiliated keyword with no space before the value
==================
#+CAPTION:v
| a |

---

(document
  (zeroth_section
    (affiliated_keyword
      (directive_name)
      (directive_value))
    (table
      (table_row
        (table_cell)))))

==================
Formula with no space before the value
==================
#+TBLFM:@2$1=@1$1

---

(document
  (zeroth_section
    (formula
      (directive_name)
      (directive_value))))

==================
Drawer containing a table
==================
:mydrawer:
| c |
:END:

---

(document
  (zeroth_section
    (drawer
      (drawer_name)
      (table
        (table_row
          (table_cell))))))

==================
Unclosed drawer containing a table row truncates at EOF
==================
:mydrawer:
| c |

---

(document
  (zeroth_section
    (drawer
      (drawer_name)
      (table
        (table_row
          (table_cell))))))

==================
Unclosed drawer containing a block open truncates at EOF
==================
:mydrawer:
#+begin_quote

---

(document
  (zeroth_section
    (drawer
      (drawer_name)
      (greater_block
        (block_name)))))
